# agent_skills

./: .gitignore  README.md
.claude/skills/: claude-code-pm
agent_manager/: .env.example  CHANGELOG.md  README.md  agent_manager.py  config.py  requirements.txt  server_client.py
agent_manager/agents/: __init__.py  base_agent.py  server_agent.py
agent_manager/tests/: test_server_integration.py
agent_worker/: .agent_task.md  .env.example  CHANGELOG.md  README.md  agent_inside.sh  agent_worker.py  agent_worker.sh  config.py  docker_manager.py  init-firewall.sh  package.json  requirements.txt
agent_worker/agents/: claude_agent.py
claude_code_server/: .env.example  .gitignore  Dockerfile  README.md  __init__.py  config.py  docker-compose.yml  example_client.py  models.py  pyproject.toml  quickstart.sh  requirements.txt  server.py  session_manager.py  task_executor.py
claude_code_server/tests/: __init__.py  test_models.py  test_server.py
conversation-qa/: SKILL.md
docs/: claude-code-server-design.md  implementation-summary.md  phase2-implementation-summary.md  v3-refactoring-summary.md
skills/beautiful-drawio/: SKILL.md
skills/brownfield-onboarding/: SKILL.md
skills/claude-code-pm/: README.md  SKILL.md
skills/deep_sec_research/: SKILL.md
skills/deepresearch/: SKILL.md  law-policy.md  report-template.html  security.md  techtrend.md
skills/graphwiki/: SKILL.md  graphwiki.py
skills/grill-with-change/: SKILL.md
skills/insight-knowledge-harvest/: SKILL.md
skills/introspection/: SKILL.md
skills/issue-fixer/: SKILL.md
skills/retrospect/: SKILL.md
(+71 files in other folders)
